Bug 13960: Update GFX combos when selection is set.